--- a/helm/charts/consumer/templates/secret.yaml
+++ b/helm/charts/consumer/templates/secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  LOG_LEVEL: "{{ .Values.logLevel }}"
+  CONSUMER_USER: 'bbk_consumer:{{ .Values.password | default .Values.global.passwords.consumer }}'
