--- a/helm/charts/contributor/values.yaml
+++ b/helm/charts/contributor/values.yaml
@@ -1,30 +1,18 @@
-## Default values for contributor helm templates.
-
-name: contributor
-group: app
-
-##contributor instance count.
-replicaCount: 1
-
-##Docker Image values.
+## Docker image
+##
 docker:
   imageTag: "latest"
-  imagePullPolicy: Always
-  imagePullSecret: regcred
+  imagePullPolicy: "Always"
+  imagePullSecret: "regcred"
 
-container:
-  name: contributor
-  port: 8002
+  ## If private registry
+  ##
+  #registry: ""
 
-## Service configuration values.
-service:
-  type: ClusterIP
-  port: 8001
+## Number of replicas
+##
+replicaCount: 1
 
-## Volume definitions.
-volume:
-  mountPath: /home/node/app/services/contributor/logs
-  pvc:
-    accessMode: ReadWriteOnce
-    storage: 4Gi
-
+## Database access
+##
+password: bbk_contributor_pwd
