--- a/helm/charts/bit-broker/templates/postgres-config.yaml
+++ b/helm/charts/bit-broker/templates/postgres-config.yaml
@@ -53,12 +53,12 @@ data:
     CREATE ROLE bbk_reader;
     CREATE ROLE bbk_writer;
 
-    CREATE USER bbk_admin WITH ENCRYPTED PASSWORD 'bbk_admin_pwd';
-    CREATE USER bbk_tests WITH ENCRYPTED PASSWORD 'bbk_tests_pwd';
-    CREATE USER bbk_coordinator WITH ENCRYPTED PASSWORD 'bbk_coordinator_pwd';
-    CREATE USER bbk_contributor WITH ENCRYPTED PASSWORD 'bbk_contributor_pwd';
-    CREATE USER bbk_consumer WITH ENCRYPTED PASSWORD 'bbk_consumer_pwd';
-    CREATE USER bbk_policy WITH ENCRYPTED PASSWORD 'bbk_policy_pwd';
+    CREATE USER bbk_admin WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.admin }}';
+    CREATE USER bbk_tests WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.tests }}';
+    CREATE USER bbk_coordinator WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.coordinator }}';
+    CREATE USER bbk_contributor WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.contributor }}';
+    CREATE USER bbk_consumer WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.consumer }}';
+    CREATE USER bbk_policy WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.policy }}';
 
     GRANT bbk_reader TO bbk_consumer;
     GRANT bbk_writer TO bbk_admin, bbk_tests, bbk_coordinator, bbk_contributor, bbk_policy;
