--- a/helm/charts/coordinator/templates/service.yaml
+++ b/helm/charts/coordinator/templates/service.yaml
@@ -2,15 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}
+  namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
-  type: {{ .Values.service.type }}
-  selector:
-    app: {{ .Values.name }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.container.port }}
-      {{ if eq .Values.service.type "NodePort" }}nodePort: {{ .Values.service.nodeport }}{{ end }}
+  - name: http
+    protocol: TCP
+    port: 8003
+    targetPort: 8003
+  type: ClusterIP
+  selector:
+    app: {{ .Release.Name }}-{{ .Chart.Name }}
