--- a/helm/charts/coordinator/values.yaml
+++ b/helm/charts/coordinator/values.yaml
@@ -1,30 +1,18 @@
-## Default values for coordinator helm templates.
-
-name: coordinator
-group: app
-
-##coordinator instance count.
-replicaCount: 1
-
-##Docker Image values.
+## Docker image
+##
 docker:
   imageTag: "latest"
-  imagePullPolicy: Always
-  imagePullSecret: regcred
+  imagePullPolicy: "Always"
+  imagePullSecret: "regcred"
 
-container:
-  name: coordinator
-  port: 8001
+  ## If private registry
+  ##
+  #registry: ""
 
+## Number of replicas
+##
+replicaCount: 1
 
-## Service configuration values.
-service:
-  type: ClusterIP
-  port: 8001
-
-## Volume definitions.
-volume:
-  mountPath: /home/node/app/services/coordinator/logs
-  pvc:
-    accessMode: ReadWriteOnce
-    storage: 4Gi
+## Database access
+##
+password: bbk_contributor_pwd
