--- a/helm/charts/policy/values.yaml
+++ b/helm/charts/policy/values.yaml
@@ -1,33 +1,21 @@
-## Default values for policy helm templates.
-
-name: policy
-group: app
-
-##policy instance count.
-replicaCount: 1
-
-##Docker Image values.
+## Docker image
+##
 docker:
   imageTag: "latest"
-  imagePullPolicy: Always
-  imagePullSecret: regcred
+  imagePullPolicy: "Always"
+  imagePullSecret: "regcred"
 
-container:
-  name: policy
-  port: 8004
+  ## If private registry
+  ##
+  #registry: ""
 
+## Number of replicas
+##
+replicaCount: 1
 
-## Service configuration values.
-service:
-  type: ClusterIP
-  port: 8004
-
-## Volume definitions.
-volume:
-  mountPath: /home/node/app/services/policy/logs
-  pvc:
-    accessMode: ReadWriteOnce
-    storage: 4Gi
+## Database access
+##
+password: bbk_policy_pwd
 
 ## Redis options
 ##
