[Helm] Pull latest charts [Chart] Fix an error in the deployment

--- a/helm/charts/consumer/templates/secret.yaml
+++ b/helm/charts/consumer/templates/secret.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  CONSUMER_USER: 'bbk_consumer:{{ .Values.password | default .Values.global.passwords.consumer }}'
+  CONSUMER_USER: {{ "bbk_consumer:{{ .Values.password | default .Values.global.passwords.consumer }}" | b64enc }}
