--- a/helm/charts/policy/templates/deployment.yaml
+++ b/helm/charts/policy/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         runAsUser: 1999
         fsGroup: 1999
       containers:
-        - name: {{ .Values.name }}
+        - name: policy
           image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/policy:{{ .Values.docker.imageTag }}"
           imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
           securityContext:
