--- a/helm/charts/policy/templates/secret.yaml
+++ b/helm/charts/policy/templates/secret.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  POLICY_USER: 'bbk_policy:{{ .Values.password | default .Values.global.passwords.policy }}'
+  POLICY_USER: {{ "bbk_policy:{{ .Values.password | default .Values.global.passwords.policy }}" | b64enc }}
