--- a/helm/charts/consumer/templates/deployment.yaml
+++ b/helm/charts/consumer/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         runAsUser: 1999
         fsGroup: 1999
       containers:
-        - name: {{ .Values.name }}
+        - name: consumer
           image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/consumer:{{ .Values.docker.imageTag }}"
           imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
           securityContext:
@@ -43,5 +43,6 @@ spec:
               value: "http://{{ .Release.Name }}-{{ .Chart.Name }}:8001/v1"
             - name: DATABASE
               value: "postgresql://CREDENTIALS@{{ .Release.Name }}-{{ .Chart.Name }}/bit_broker"
-          - secretRef:
-              name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
