--- a/helm/charts/contributor/templates/secret.yaml
+++ b/helm/charts/contributor/templates/secret.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  CONTRIBUTOR_USER: 'bbk_contributor:{{ .Values.password | default .Values.global.passwords.contributor }}'
+  CONTRIBUTOR_USER: {{ "bbk_contributor:{{ .Values.password | default .Values.global.passwords.contributor }}" | b64enc }}
