--- a/helm/charts/coordinator/templates/secret.yaml
+++ b/helm/charts/coordinator/templates/secret.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  COORDINATOR_USER: 'bbk_coordinator:{{ .Values.password | default .Values.global.passwords.coordinator }}'
+  COORDINATOR_USER: {{ "bbk_coordinator:{{ .Values.password | default .Values.global.passwords.coordinator }}" | b64enc }}
