[Secrets] Fix variable

--- a/helm/charts/consumer/templates/secret.yaml
+++ b/helm/charts/consumer/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- $secret := printf "%s:%s" "bbk_consumer" (.Values.password | default .Values.global.passwords.consumer) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +9,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  CONSUMER_USER: {{ "bbk_consumer:{{ .Values.password | default .Values.global.passwords.consumer }}" | b64enc }}
+  CONSUMER_USER: {{ $secret | b64enc }}
