--- a/helm/charts/contributor/templates/secret.yaml
+++ b/helm/charts/contributor/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- $secret := printf "%s:%s" "bbk_contributor" (.Values.password | default .Values.global.passwords.contributor) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +9,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  CONTRIBUTOR_USER: {{ "bbk_contributor:{{ .Values.password | default .Values.global.passwords.contributor }}" | b64enc }}
+  CONTRIBUTOR_USER: {{ $secret | b64enc }}
