--- a/helm/charts/coordinator/templates/secret.yaml
+++ b/helm/charts/coordinator/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- $secret := printf "%s:%s" "bbk_coordinator" (.Values.password | default .Values.global.passwords.coordinator) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +9,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  COORDINATOR_USER: {{ "bbk_coordinator:{{ .Values.password | default .Values.global.passwords.coordinator }}" | b64enc }}
+  COORDINATOR_USER: {{ $secret | b64enc }}
