--- a/helm/charts/policy/templates/secret.yaml
+++ b/helm/charts/policy/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- $secret := printf "%s:%s" "bbk_policy" (.Values.password | default .Values.global.passwords.policy) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +9,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  POLICY_USER: {{ "bbk_policy:{{ .Values.password | default .Values.global.passwords.policy }}" | b64enc }}
+  POLICY_USER: {{ $secret | b64enc }}
