--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -81,6 +81,11 @@ global:
       ##   GKE, AWS & OpenStack)
       # storageClass: "-"
 
+  ## Enable or disable metrics for Prometheus
+  ##
+  metrics:
+    enabled: false
+
 ## End of Global Values
 #######################################################################################
 
