--- a/helm/charts/policy/templates/deployment.yaml
+++ b/helm/charts/policy/templates/deployment.yaml
@@ -16,9 +16,11 @@ spec:
     metadata:
       labels:
         app: {{ .Release.Name }}-{{ .Chart.Name }}
+{{- if or (.Values.global.metrics.enabled) (.Values.metrics.enabled) }}
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8004"
+{{- end }}
     spec:
       securityContext:
         runAsNonRoot: true
@@ -47,6 +49,8 @@ spec:
               value: "redis://{{ .Release.Name }}-{{ .Chart.Name }}-cache:6379"
             - name: RATE_LIMIT_BASE
               value: "http://{{ .Release.Name }}-rate-service-bbk:4000/api/v1"
+            - name: METRICS_ENABLED
+              value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
