--- a/helm/charts/rate-service/templates/deployment.yaml
+++ b/helm/charts/rate-service/templates/deployment.yaml
@@ -16,9 +16,11 @@ spec:
     metadata:
       labels:
         app: {{ .Release.Name }}-{{ .Chart.Name }}
+{{- if or (.Values.global.metrics.enabled) (.Values.metrics.enabled) }}
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "4000"
+{{- end }}
     spec:
       preemptionPolicy: PreemptLowerPriority
       securityContext:
@@ -45,6 +47,8 @@ spec:
             value: "0.0.0.0:7000"
           - name: GO_ENV
             value: "production"
+          - name: METRICS_ENABLED
+            value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
 {{- if (not .Values.redis.ownInstance.enabled) }}
           - name: REDIS_ADDR
             value: "{{ .Release.Name }}-{{ .Chart.Name }}-redis:6379"
