--- a/helm/charts/rate-service/values.yaml
+++ b/helm/charts/rate-service/values.yaml
@@ -51,3 +51,8 @@ redis:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     # storageClass: "-"
+
+## Enable or disable metrics for Prometheus
+##
+metrics:
+  enabled: false
