--- a/helm/charts/bit-broker/templates/postgres-config.yaml
+++ b/helm/charts/bit-broker/templates/postgres-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: bit-broker-postgres-config
+  name: bbk-postgresql-config
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
