--- a/helm/charts/auth-service/templates/deployment.yaml
+++ b/helm/charts/auth-service/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  name: {{ .Chart.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -11,11 +11,11 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-{{ .Chart.Name }}
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-{{ .Chart.Name }}
+        app: {{ .Chart.Name }}
 {{- if or (.Values.global.metrics.enabled) (.Values.metrics.enabled) }}
       annotations:
         prometheus.io/scrape: "true"
@@ -30,7 +30,7 @@ spec:
       containers:
       - name: auth-service
         imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
-        image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/auth-service:{{ .Values.docker.imageTag }}"
+        image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/bbk-auth-service:{{ .Values.docker.imageTag }}"
         securityContext:
           allowPrivilegeEscalation: false
         ports:
@@ -40,6 +40,6 @@ spec:
             value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
         envFrom:
           - configMapRef:
-              name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
+              name: {{ .Chart.Name }}-configmap
           - secretRef:
-              name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
+              name: {{ .Chart.Name }}-secret
