--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -1,8 +1,8 @@
-{{- if index .Values "oathkeeper-bbk" "enabled" }}
+{{- if index .Values "bbk-oathkeeper" "enabled" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-oathkeeper-bbk-rules
+  name: bbk-oathkeeper-rules
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
