--- a/helm/charts/coordinator/templates/secret.yaml
+++ b/helm/charts/coordinator/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
+  name: {{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
