--- a/helm/charts/rate-service/templates/service.yaml
+++ b/helm/charts/rate-service/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  name: {{ .Chart.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -19,4 +19,4 @@ spec:
     targetPort: 7000
   type: ClusterIP
   selector:
-    app: {{ .Release.Name }}-{{ .Chart.Name }}
+    app: {{ .Chart.Name }}
