Switch to three letter bbk prefix across all docker and k8s resources.
Missed values.

fixes #45

--- a/helm/charts/contributor/templates/deployment.yaml
+++ b/helm/charts/contributor/templates/deployment.yaml
@@ -42,9 +42,9 @@ spec:
             - name: CONTRIBUTOR_NAME
               value: "Bit-Broker Contributor Server"
             - name: CONTRIBUTOR_BASE
-              value: "http://{{ .Release.Name }}-{{ .Chart.Name }}:8002/v1"
+              value: "http://{{ .Chart.Name }}:8002/v1"
             - name: DATABASE
-              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-{{ .Chart.Name }}/bit_broker"
+              value: "postgresql://CREDENTIALS@{{ .Chart.Name }}/bit_broker"
             - name: METRICS_ENABLED
               value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
           envFrom:
