--- a/helm/charts/auth-service/templates/secret.yaml
+++ b/helm/charts/auth-service/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Chart.Name }}-secret
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
