--- a/helm/charts/auth-service/templates/service.yaml
+++ b/helm/charts/auth-service/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -15,4 +15,4 @@ spec:
     targetPort: 8080
   type: ClusterIP
   selector:
-    app: {{ .Chart.Name }}
+    app: {{ .Release.Name }}-{{ .Chart.Name }}
