--- a/helm/charts/rate-service/templates/service-redis.yaml
+++ b/helm/charts/rate-service/templates/service-redis.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}-redis
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-redis
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -15,5 +15,5 @@ spec:
     port: 6379
   type: ClusterIP
   selector:
-    app: {{ .Chart.Name }}-redis
+    app: {{ .Release.Name }}-{{ .Chart.Name }}-redis
 {{- end }}
