--- a/helm/charts/contributor/templates/deployment.yaml
+++ b/helm/charts/contributor/templates/deployment.yaml
@@ -35,6 +35,8 @@ spec:
           ports:
             - containerPort: 8002
           env:
+            - name: NODE_ENV
+              value: "production"
             - name: APP_NAME
               value: "Bit-Broker"
             - name: APP_MODE
